--- a/cloudfunctions/school/package.json
+++ b/cloudfunctions/school/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "got": "^12.0.3",
+    "request-promise": "^4.2.6",
     "wx-server-sdk": "~2.5.3"
   }
 }
