--- a/package.json
+++ b/package.json
@@ -38,30 +38,30 @@
     "@babel/runtime": "^7.7.7",
     "@tarojs/cli": "3.4.2",
     "@tarojs/components": "3.4.2",
+    "@tarojs/plugin-framework-react": "3.4.2",
+    "@tarojs/react": "3.4.2",
     "@tarojs/runtime": "3.4.2",
     "@tarojs/taro": "3.4.2",
-    "@tarojs/plugin-framework-react": "3.4.2",
     "lodash": "4.17.15",
-    "taro-ui": "^3.0.0-alpha.3",
-    "@tarojs/react": "3.4.2",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "taro-ui": "^3.0.0-alpha.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
     "@tarojs/mini-runner": "3.4.2",
     "@tarojs/webpack-runner": "3.4.2",
+    "@types/react": "^17.0.2",
     "@types/webpack-env": "^1.13.6",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "babel-preset-taro": "3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-taro": "3.4.2",
-    "stylelint": "9.3.0",
-    "@typescript-eslint/parser": "^4.15.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "typescript": "^4.1.0",
-    "@types/react": "^17.0.2",
-    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "stylelint": "9.3.0",
+    "typescript": "^4.1.0"
   }
 }
